--- a/estilosindex.css
+++ b/estilosindex.css
@@ -5,29 +5,22 @@ html {
 
 body {
 
-    border: 4px tomato solid;
+    border: 4px rgb(10, 17, 73) solid;
     min-height: 100px;
-    background-color: rgb(231, 205, 201);
-    border: 4px rgba(147, 58, 155, 0.774);
-    min-height: 50px;
-    background-color: rgba(36, 71, 117, 0.767);
+    background-color: rgb(11, 11, 59);
 
     margin: 0;
 }
 
 header,main,footer {
-    border: 3px rgba(192, 143, 52, 0.856) solid;
+    border: 3px rgba(23, 4, 129, 0.856) solid;
     min-height: 50px;
     margin: 1rem;
     background-color: rgb(184, 184, 204);
 
 }
 
-.contenido-principal {
-    border: 3px rgb(165, 165, 197) solid;
-    margin: 1rem;
-    width: 65%;
-}
+
 
 .heather-logo {
     box-align: left;
@@ -39,10 +32,11 @@ header,main,footer {
 
 main {
     min-height: 200px;
-    border: 3px tomato solid;
+    border: 3px rgba(23, 4, 129, 0.856) solid;
     margin: 1rem;
     background-color: rgb(184, 184, 204);
     overflow: auto;
+
 }
 
 
@@ -51,21 +45,44 @@ main {
     margin: 1rem;
     background-color: rgba(247, 238, 205, 0.808);
     text-align: left;
+    min-height: 180px;
+    width: 65%;
+    height: auto;
+    float: left;
 }
 
 .seccion {
     margin: 1rem;
     border: 2px rgb(172, 172, 204) solid;
-    background-color:rgba(247, 238, 205, 0.808) ;
-    min-width: 75%;  
+    background-color:rgba(247, 238, 205, 0.808) ;  
+    min-height: 180px;
+    min-width: 65%;
+    height: auto;
+    float: left;
 }
 
+#botonNovedades {
+    background-color: rgba(11, 11, 66, 0.699);
+    border: 2px solid #01041a;
+    border-radius: 6px;
+}
+
+#botonNovedades:hover {
+  background-color:rgb(11, 11, 66) ; 
+  color:white 
+
+}
 aside {
     float: right;
     margin: 1rem;
     background-color: darkgray;
     text-align: center;
     border: 2px rgb(172, 172, 204) solid;
-    min-width: 20%;
-    align-self: center;   
+    min-width: 25%; 
+    min-height: 100%; 
+   
+}
+#mapa{
+    width: 90%;
+   min-height: 180px;
 }
