--- a/estilosindex.css
+++ b/estilosindex.css
@@ -20,15 +20,51 @@ header,main,footer {
 
 }
 
+footer{
+    font-family: 'Khand', sans-serif;
+}
+
 
 
 .heather-logo {
-    box-align: left;
+    
+    width: auto;
+    display: inline-block;
+    margin: 0.5rem;
+    padding: 1rem;
+    
 }
 
-.header-menubar {
-    text-align: center;
+.header-menubar{
+    padding: 14px 16px;
+    font-family: 'Bebas Neue', cursive;
+    position:relative;
+    
 }
+.header-menubar a {
+    border: 4px rgba(23, 4, 129, 0.856) solid;
+    background-color: rgb(182, 194, 206);
+    text-align: center;
+    top: auto;
+    width: auto;
+    display: inline-block;
+    margin: 0 0.5rem 0;
+    font-weight: 700;
+    left: auto;
+    font-size: 30px;
+    padding: 16px 16px;
+    text-decoration: none;
+   
+}
+.header-menubar a:hover {
+    background-color: rgb(159, 170, 190);
+    color: black;
+
+}
+.contenido-principal{
+    font-family: 'DM Serif Display', serif;
+}
+   
 
 main {
     min-height: 200px;
@@ -46,9 +82,11 @@ main {
     background-color: rgba(247, 238, 205, 0.808);
     text-align: left;
     min-height: 180px;
-    width: 65%;
+    width: 60%;
     height: auto;
     float: left;
+    padding: 30px;
+    
 }
 
 .seccion {
@@ -56,9 +94,10 @@ main {
     border: 2px rgb(172, 172, 204) solid;
     background-color:rgba(247, 238, 205, 0.808) ;  
     min-height: 180px;
-    min-width: 65%;
+    min-width: 60%;
     height: auto;
     float: left;
+    padding: 30px;
 }
 
 #botonNovedades {
@@ -73,12 +112,12 @@ main {
 
 }
 aside {
-    float: right;
+    float: left;
     margin: 1rem;
     background-color: darkgray;
     text-align: center;
     border: 2px rgb(172, 172, 204) solid;
-    min-width: 25%; 
+    min-width: 20%; 
     min-height: 100%; 
    
 }
