--- a/estilosFormularios.css
+++ b/estilosFormularios.css
@@ -22,6 +22,7 @@ header,main,footer {
     min-height: 50px;
     margin: 1rem;
     background-color: rgb(184, 184, 204);
+    padding: 1rem;
 
 }
 
@@ -38,7 +39,7 @@ footer{
 }
 
 .header-menubar{
-    text-decoration-color: blueviolet;
+    
     padding: 14px 16px;
     font-family: 'Bebas Neue', cursive;
     position:relative;
