--- a/estilosPV.css
+++ b/estilosPV.css
@@ -2,6 +2,13 @@ html {
     font-size: 1rem;
     height: 100%;
 }
+h1 { 
+    text-align: center;
+    font-family: 'Alfa Slab One', cursive;
+}
+p{
+    text-align: justify;
+}
 body {
 
     
@@ -9,12 +16,16 @@ body {
     background-color: rgb(11, 11, 59);
     margin: 0;
 }
+main{
+    font-family: 'Prompt', sans-serif;
+}
 
 header,main,footer {
     border: 3px rgba(23, 4, 129, 0.856) solid;
     min-height: 50px;
     margin: 1rem;
     background-color: rgb(184, 184, 204);
+  
 
 }
 
