--- a/estilosFormularios.css
+++ b/estilosFormularios.css
@@ -22,7 +22,7 @@ header,main,footer {
     min-height: 50px;
     margin: 1rem;
     background-color: rgb(184, 184, 204);
-    padding: 1rem;
+    
 
 }
 
@@ -43,7 +43,29 @@ footer{
     padding: 14px 16px;
     font-family: 'Bebas Neue', cursive;
     position:relative;
+    text-align: center;
     
+}
+.box div{
+    display: flex;
+    display: inline-block;
+    border: 3px ;
+    justify-content: space-between space-around;
+    padding: 1rem;
+   
+   
+}
+.c1{
+  flex:2;
+}
+.c2{
+    flex:1;
+}
+.c3{
+    flex:1;
+}
+.c4{
+    flex: 1;
 }
 .header-menubar a {
     border: 4px rgba(23, 4, 129, 0.856) solid;
@@ -64,4 +86,8 @@ footer{
     background-color: rgb(159, 170, 190);
     color: black;
 
+}
+
+i{
+    padding: 0.5rem;
 }
