--- a/estilosPV.css
+++ b/estilosPV.css
@@ -5,6 +5,10 @@ html {
 h1 { 
     text-align: center;
     font-family: 'Alfa Slab One', cursive;
+    
+}
+h2{
+    font-family: 'DM Serif Display', serif;
 }
 p{
     text-align: justify;
@@ -32,19 +36,23 @@ header,main,footer {
 footer{
     font-family: 'Khand', sans-serif;
 }
+
+
+    
+
 .heather-logo {
     
     width: auto;
     display: inline-block;
     margin: 0.5rem;
-    padding: 1rem;
-    
+    padding: 1rem; 
 }
 
 .header-menubar{
     padding: 14px 16px;
     font-family: 'Bebas Neue', cursive;
     position:relative;
+    text-align: center;
     
 }
 .header-menubar a {
@@ -66,4 +74,75 @@ footer{
     background-color: rgb(159, 170, 190);
     color: black;
 
+}
+.cajas div{
+    display: flex;
+    flex-direction: column;
+    border: 3px ;
+    justify-content: space-between space-around;
+    padding: 1rem;
+    background-color: rgb(212, 212, 230);
+    margin: 1rem;
+    border: 3px rgb(176, 184, 197)solid;
+}
+.box1{
+    flex: 1;
+    
+}
+.box2{
+    flex: 1;
+    
+}
+.box3 {
+    flex: 1;
+    
+}
+.box3{
+    flex: 1;
+    
+}
+.box4{
+    flex: 1;
+    
+}
+.box5{
+    flex: 1;
+    
+}
+.box6{
+    flex: 1;
+    
+}
+.box7{
+    flex: 1;
+    
+}
+.box8{
+    flex: 1;
+    overflow: auto;
+}
+
+i{
+    padding: 0.5rem;
+}
+.box div{
+    display: flex;
+    display: inline-block;
+    border: 3px ;
+    justify-content: space-between space-around;
+    padding: 1rem;
+   
+   
+}
+.c1{
+  flex:2;
+}
+.c2{
+    flex:1;
+}
+.c3{
+    flex:1;
+}
+.c4{
+    flex: 1;
 }
