--- a/estilosindex.css
+++ b/estilosindex.css
@@ -36,6 +36,7 @@ footer{
     padding: 14px 16px;
     font-family: 'Bebas Neue', cursive;
     position:relative;
+    text-align: center;
     
 }
 .header-menubar a {
@@ -52,6 +53,27 @@ footer{
     padding: 16px 16px;
     text-decoration: none;
    
+}
+.box div{
+    display: flex;
+    display: inline-block;
+    border: 3px ;
+    justify-content: space-between space-around;
+    padding: 1rem;
+   
+   
+}
+.c1{
+  flex:2;
+}
+.c2{
+    flex:1;
+}
+.c3{
+    flex:1;
+}
+.c4{
+    flex: 1;
 }
 .header-menubar a:hover {
     background-color: rgb(159, 170, 190);
