--- a/estilospaquetes.css
+++ b/estilospaquetes.css
@@ -35,6 +35,7 @@ footer{
     padding: 14px 16px;
     font-family: 'Bebas Neue', cursive;
     position:relative;
+    text-align: center;
     
 }
 .header-menubar a {
@@ -56,4 +57,28 @@ footer{
     background-color: rgb(159, 170, 190);
     color: black;
 
+}
+i{
+    padding: 0.5rem;
+}
+.box div{
+    display: flex;
+    display: inline-block;
+    border: 3px ;
+    justify-content: space-between space-around;
+    padding: 1rem;
+   
+   
+}
+.c1{
+  flex:2;
+}
+.c2{
+    flex:1;
+}
+.c3{
+    flex:1;
+}
+.c4{
+    flex: 1;
 }
