--- a/estilospaquetes.css
+++ b/estilospaquetes.css
@@ -2,6 +2,17 @@ html {
     font-size: 1rem;
     height: 100%;
 }
+h1 { 
+    text-align: center;
+    font-family: 'Alfa Slab One', cursive;
+    
+}
+h2{
+    font-family: 'DM Serif Display', serif;
+}
+main{
+    font-family: 'Prompt', sans-serif;
+}
 body {
 
     
