--- a/estilosPV.css
+++ b/estilosPV.css
@@ -2,59 +2,57 @@ html {
     font-size: 1rem;
     height: 100%;
 }
-h1 { 
+
+h1 {
     text-align: center;
     font-family: 'Alfa Slab One', cursive;
-    
 }
-h2{
+
+h2 {
     font-family: 'DM Serif Display', serif;
 }
-p{
+
+p {
     text-align: justify;
 }
-body {
 
-    
+body {
     min-height: 100px;
     background-color: rgb(11, 11, 59);
     margin: 0;
 }
-main{
+
+main {
     font-family: 'Prompt', sans-serif;
 }
 
-header,main,footer {
+header,
+main,
+footer {
     border: 3px rgba(23, 4, 129, 0.856) solid;
     min-height: 50px;
     margin: 1rem;
     background-color: rgb(184, 184, 204);
-  
-
 }
 
-footer{
+footer {
     font-family: 'Khand', sans-serif;
 }
 
-
-    
-
-.heather-logo {
-    
+#header-logo {
     width: auto;
     display: inline-block;
     margin: 0.5rem;
-    padding: 1rem; 
+    padding: 1rem;
 }
 
-.header-menubar{
+.header-menubar {
     padding: 14px 16px;
     font-family: 'Bebas Neue', cursive;
-    position:relative;
+    position: relative;
     text-align: center;
-    
 }
+
 .header-menubar a {
     border: 4px rgba(23, 4, 129, 0.856) solid;
     background-color: rgb(182, 194, 206);
@@ -68,82 +66,53 @@ footer{
     font-size: 30px;
     padding: 16px 16px;
     text-decoration: none;
-   
 }
+
 .header-menubar a:hover {
     background-color: rgb(159, 170, 190);
     color: black;
-
 }
-.cajas div{
+
+.cajas div {
     display: flex;
     flex-direction: column;
-    border: 3px ;
+    border: 3px;
     justify-content: space-between space-around;
     padding: 1rem;
     background-color: rgb(212, 212, 230);
     margin: 1rem;
     border: 3px rgb(176, 184, 197)solid;
 }
-.box1{
+
+.box1 {
     flex: 1;
-    
-}
-.box2{
-    flex: 1;
-    
-}
-.box3 {
-    flex: 1;
-    
-}
-.box3{
-    flex: 1;
-    
-}
-.box4{
-    flex: 1;
-    
-}
-.box5{
-    flex: 1;
-    
-}
-.box6{
-    flex: 1;
-    
-}
-.box7{
-    flex: 1;
-    
-}
-.box8{
-    flex: 1;
-    
-    
 }
 
-i{
+article {
+    padding-top: 1rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
+}
+
+i {
     padding: 0.5rem;
 }
-.box div{
+
+.box div {
     display: flex;
     display: inline-block;
-    border: 3px ;
+    border: 3px;
     justify-content: space-between space-around;
     padding: 1rem;
-   
-   
 }
-.c1{
-  flex:2;
-}
-.c2{
-    flex:1;
-}
-.c3{
-    flex:1;
-}
-.c4{
+
+.c1,
+.c2,
+.c3,
+.c4 {
     flex: 1;
+}
+
+#video {
+    height: 400px;
 }
