--- a/estilosPV.css
+++ b/estilosPV.css
@@ -26,7 +26,12 @@ main {
     font-family: 'Prompt', sans-serif;
 }
 
-header,
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 main,
 footer {
     border: 3px rgba(23, 4, 129, 0.856) solid;
