--- a/css/estilosindex.css
+++ b/css/estilosindex.css
@@ -10,7 +10,6 @@ body {
 }
 
 header {
-    
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -28,21 +27,21 @@ footer {
     font-family: 'Khand', sans-serif;
 }
 
-.heather-logo {
+#header-logo {
     width: auto;
     display: inline-block;
     margin: 0.5rem;
     padding: 1rem;
 }
 
-.header-menubar {
+#header-menubar {
     padding: 14px 16px;
     font-family: 'Bebas Neue', cursive;
     position: relative;
     text-align: center;
 }
 
-.header-menubar a {
+#header-menubar a {
     border: 4px rgba(23, 4, 129, 0.856) solid;
     background-color: rgb(182, 194, 206);
     text-align: center;
@@ -55,10 +54,9 @@ footer {
     font-size: 30px;
     padding: 16px 16px;
     text-decoration: none;
-    
 }
 
-.box div {
+#box div {
     display: flex;
     display: inline-block;
     border: 3px;
@@ -66,19 +64,13 @@ footer {
     padding: 1rem;
 }
 
-.c1 {
+#c1 {
     flex: 2;
 }
 
-.c2 {
-    flex: 1;
-}
-
-.c3 {
-    flex: 1;
-}
-
-.c4 {
+#c2,
+#c3,
+#c4 {
     flex: 1;
 }
 
@@ -87,7 +79,7 @@ footer {
     color: black;
 }
 
-.contenido-principal {
+#contenido-principal {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-gap: 1rem;
@@ -95,30 +87,25 @@ footer {
     grid-auto-rows: auto;
 }
 
-.box1 {
+#box1,
+#box2 {
     grid-column: 1/2;
     grid-row: 1/2;
     margin: 1rem 1rem;
 }
 
-.box2 {
-    grid-column: 2/3;
-    grid-row: 1/3;
-    margin: 1rem 1rem;
-}
-
-.box3 {
+#box3 {
     grid-column: 1/2;
     grid-row: 2/3;
     margin: 1rem 1rem;
 }
 
-.sectionG {
+#sectionG {
     background-color: rgb(182, 194, 206);
     padding: 1rem;
 }
 
-.section {
+#section {
     background-color: rgb(182, 194, 206);
     padding: 1rem;
     align-items: center;
@@ -152,16 +139,40 @@ i {
     padding: 0.5rem;
 }
 
-.imagenes {
+#imagenes {
     padding: 1rem;
     border: 4px rgba(23, 4, 129, 0.856) solid;
-    width: auto;
+    display: flex;
     background-color: rgba(36, 36, 75, 0.877);
     align-items: center;
-    
 }
 
 img {
-    width: auto;
-    display: inline-block;
+    padding: 0.5rem;
+    max-width: 285px;
+}
+
+#img1 {
+    animation: backInRight;
+    animation-duration: 1s;
+}
+
+#img2 {
+    animation: backInRight;
+    animation-duration: 1.2s;
+}
+
+#img3 {
+    animation: backInRight;
+    animation-duration: 1.4s;
+}
+
+#img4 {
+    animation: backInRight;
+    animation-duration: 1.6s;
+}
+
+#img5 {
+    animation: backInRight;
+    animation-duration: 1.8s;
 }
