--- a/css/estilosFormularios.css
+++ b/css/estilosFormularios.css
@@ -1,100 +1,170 @@
-h1 {
-    text-align: center;
-}
-
-textarea {
-    width: 100%;
-}
-
-html {
-    font-size: 1rem;
-    height: 100%;
+* {
+    box-sizing: border-box;
 }
 
 body {
-    min-height: 100px;
-    background-color: rgb(11, 11, 59);
+    font-family: 'Roboto', sans-serif;
+    background: #E5E5E5;
+}
+
+main {
+    max-width: 800px;
+    width: 90%;
+    margin: auto;
+    padding: 40px;
+}
+
+#formulario {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.formulario__label {
+    display: block;
+    font-weight: 700;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.formulario__grupo-input {
+    position: relative;
+}
+
+.formulario__input {
+    width: 100%;
+    background: #fff;
+    border: 3px solid transparent;
+    border-radius: 3px;
+    height: 45px;
+    line-height: 45px;
+    padding: 0 40px 0 10px;
+    transition: .3s ease all;
+}
+
+.formulario__input:focus {
+    border: 3px solid #0075FF;
+    outline: none;
+    box-shadow: 3px 0px 30px rgba(163, 163, 163, 0.4);
+}
+
+.formulario__input-error {
+    font-size: 12px;
+    margin-bottom: 0;
+    display: none;
+}
+
+.formulario__input-error-activo {
+    display: block;
+}
+
+.formulario__validacion-estado {
+    position: absolute;
+    right: 10px;
+    bottom: 15px;
+    z-index: 100;
+    font-size: 16px;
+    opacity: 0;
+}
+
+.formulario__checkbox {
+    margin-right: 10px;
+}
+
+.formulario__grupo-terminos,
+.formulario__mensaje,
+.formulario__grupo-btn-enviar {
+    grid-column: span 2;
+}
+
+.formulario__mensaje {
+    height: 45px;
+    line-height: 45px;
+    background: #F66060;
+    padding: 0 15px;
+    border-radius: 3px;
+    display: none;
+}
+
+.formulario__mensaje-activo {
+    display: block;
+}
+
+.formulario__mensaje p {
     margin: 0;
 }
 
-header {
+.formulario__grupo-btn-enviar {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
 }
 
-main,
-footer {
-    border: 3px rgba(23, 4, 129, 0.856) solid;
-    min-height: 50px;
-    margin: 1rem;
-    background-color: rgb(184, 184, 204);
-    padding-bottom: 5px;
+.formulario__btn {
+    height: 45px;
+    line-height: 45px;
+    width: 30%;
+    background: #000;
+    color: #fff;
+    font-weight: bold;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: .1s ease all;
 }
 
-footer {
-    font-family: 'Khand', sans-serif;
+.formulario__btn:hover {
+    box-shadow: 3px 0px 30px rgba(163, 163, 163, 1);
 }
 
-.header-logo {
-    width: auto;
-    display: inline-block;
-    margin: 0.5rem;
-    padding: 1rem;
+.formulario__mensaje-exito {
+    font-size: 14px;
+    color: #119200;
+    display: none;
 }
 
-.header-menubar {
-    padding: 14px 16px;
-    font-family: 'Bebas Neue', cursive;
-    position: relative;
-    text-align: center;
-    align-self: center;
+.formulario__mensaje-exito-activo {
+    display: block;
 }
 
-.box div {
-    display: flex;
-    display: inline-block;
-    border: 3px;
-    justify-content: space-between space-around;
-    padding: 1rem;
+
+/* ----- -----  Estilos para Validacion ----- ----- */
+
+.formulario__grupo-correcto .formulario__validacion-estado {
+    color: #1ed12d;
+    opacity: 1;
 }
 
-.c1 {
-    flex: 2;
+.formulario__grupo-correcto .formulario__input {
+    border: 3px solid #1ed12d;
 }
 
-.c2 {
-    flex: 1;
+.formulario__grupo-incorrecto .formulario__label {
+    color: #bb2929;
 }
 
-.c3 {
-    flex: 1;
+.formulario__grupo-incorrecto .formulario__validacion-estado {
+    color: #bb2929;
+    opacity: 1;
 }
 
-.c4 {
-    flex: 1;
+.formulario__grupo-incorrecto .formulario__input {
+    border: 3px solid #bb2929;
 }
 
-.header-menubar a {
-    border: 4px rgba(23, 4, 129, 0.856) solid;
-    background-color: rgb(182, 194, 206);
-    text-align: center;
-    top: auto;
-    width: auto;
-    display: inline-block;
-    margin: 0 0.5rem 0;
-    font-weight: 700;
-    left: auto;
-    font-size: 30px;
-    padding: 16px 16px;
-    text-decoration: none;
-}
 
-.header-menubar a:hover {
-    background-color: rgb(159, 170, 190);
-    color: black;
-}
+/* ----- -----  Mediaqueries ----- ----- */
 
-i {
-    padding: 0.5rem;
+@media screen and (max-width: 800px) {
+    .formulario {
+        grid-template-columns: 1fr;
+    }
+    .formulario__grupo-terminos,
+    .formulario__mensaje,
+    .formulario__grupo-btn-enviar {
+        grid-column: 1;
+    }
+    .formulario__btn {
+        width: 100%;
+    }
 }
