--- a/css/estilosindex.css
+++ b/css/estilosindex.css
@@ -87,10 +87,15 @@ footer {
     grid-auto-rows: auto;
 }
 
-#box1,
-#box2 {
+#box1 {
     grid-column: 1/2;
     grid-row: 1/2;
+    margin: 1rem 1rem;
+}
+
+#box2 {
+    grid-column: 2/3;
+    grid-row: 1/3;
     margin: 1rem 1rem;
 }
 
@@ -145,6 +150,7 @@ i {
     display: flex;
     background-color: rgba(36, 36, 75, 0.877);
     align-items: center;
+    overflow: auto;
 }
 
 img {
